# py-nf

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_PLAN_NFCORE_DOCKER.md  README.md  check_parsed_ast.py  explore_groovy_ast.py  explore_nextflow_internals.py  explore_process_inputs.py  extract_inputs_from_ast.py  file-output-process.nf  hello-world.nf  main.py  plan.md  pyproject.toml  roadmap.md  setup_nextflow.py  simple-process.nf  test_final.py  test_integration.py  test_nfcore_docker.py
.claude/skills/: analyze-java-types.md  batch-process-with-nextflow.md  convert-nextflow-to-python.md  create-integration-test.md  debug-observer-events.md  download-nfcore-module.md  integrate-nextflow-pipeline.md  run-nextflow-module.md  setup-nextflow-env.md  test-nextflow-module.md
docs/: index.md
docs/architecture/: call-graph.md  overview.md
docs/jvm/: jpype-bridge.md
docs/nextflow/: internals-primer.md  introspection.md  (+1 more)
examples/: agent_demo.py  test_ast.py  wave_example.py
nextflow_scripts/: file-output-process.nf  hello-world.nf  simple-process.nf
notes/: module-chaining-plan.md  native-api-input-extraction.md  nextflow.md  plan.md  seqera-remote-design.md  seqera-remote-execution-plan.md
py_nf/: __init__.py
src/pynf/: api.py  (+28 more)
test_nfcore_cache/: modules_list.txt
tests/: test_agent_tools.py  test_ast_engine.py  test_cli_manual.py  test_extract_module_inputs.py  test_integration.py  test_list_modules.py  test_multi_input_validation.py  test_nfcore_docker.py  test_pythonic_api_grouping.py  test_result_outputs.py  test_verbose_mode.py  test_wave.py
(+51 files in other folders)
