[project]
name = "pynf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jpype1>=1.6.0",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["src/pynf"]

[tool.hatch.build.targets.wheel]
packages = ["src/pynf"]
